--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,5 +22,20 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
-    - name: Run tests with Maven
-      run: mvn -B test --file pom.xml
+    #- name: Run tests with Maven
+    #  run: mvn -B test --file pom.xml
+    - name: Build
+      run: mvn --batch-mode -DskipTests package
+
+    - name: Test
+      run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+
+    - name: Report
+      uses: dorny/test-reporter@v1
+      if: always()
+      with:
+        name: Maven Tests
+        path: target/surefire-reports/*.xml
+        reporter: java-junit
+        fail-on-error: true
+
