--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,20 @@
     <groupId>br.unicap.meow.compiler</groupId>
     <artifactId>meow-compiler</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <build>
+    <build>        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <showDeprecation>true</showDeprecation>
+                    <release>11</release>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
             </plugin>
         </plugins>
     </build>
